# backend/api-docs/api-docs.yaml
@@ -59,14 +59,14 @@ paths:
               $ref: '#/components/schemas/User'
         required: true
       responses:
+        "400":
+          description: User couldn't register
         "200":
           description: User registerd successfully
           content:
             application/json:
               schema:
                 $ref: '#/components/schemas/User'
-        "400":
-          description: User couldn't register
   /api/users/{id}:
     get:
       tags:
@@ -81,14 +81,14 @@ paths:
           type: integer
           format: int64
       responses:
+        "404":
+          description: User not found
         "200":
           description: Found the user
           content:
             application/json:
               schema:
                 $ref: '#/components/schemas/User_Mostrar'
-        "404":
-          description: User not found
     put:
       tags:
       - user-rest-controller
@@ -130,14 +130,14 @@ paths:
           type: integer
           format: int64
       responses:
+        "404":
+          description: tournament not found
         "200":
           description: got tournament successfully
           content:
             application/json:
               schema:
                 $ref: '#/components/schemas/Tournament'
-        "404":
-          description: tournament not found
     put:
       tags:
       - tournament-rest-controller
@@ -159,16 +159,16 @@ paths:
       responses:
         "401":
           description: you are not authorized to update the tournament
+        "404":
+          description: tournament not found
+        "400":
+          description: couldn't get the tournament
         "200":
           description: tournament updated successfully
           content:
             application/json:
               schema:
                 $ref: '#/components/schemas/Tournament'
-        "400":
-          description: couldn't get the tournament
-        "404":
-          description: tournament not found
     delete:
       tags:
       - tournament-rest-controller
@@ -182,6 +182,8 @@ paths:
           type: integer
           format: int64
       responses:
+        "404":
+          description: tournament not found
         "200":
           description: tournamente deleted successfully
           content:
@@ -190,8 +192,6 @@ paths:
                 $ref: '#/components/schemas/Tournament'
         "401":
           description: you are not authorized to delete the tournament
-        "404":
-          description: tournament not found
   /api/tournaments/{id}/teams:
     get:
       tags:
@@ -206,14 +206,14 @@ paths:
           type: integer
           format: int64
       responses:
+        "404":
+          description: tournament not found
         "200":
           description: success getting the teams
           content:
             application/json:
               schema:
                 $ref: '#/components/schemas/Tournament_Mostrar'
-        "404":
-          description: tournament not found
     put:
       tags:
       - tournament-rest-controller
@@ -235,16 +235,16 @@ paths:
       responses:
         "400":
           description: couldn't get the teams
+        "404":
+          description: tournament not found
+        "401":
+          description: you are not authorized to see the teams
         "200":
           description: teams posted successfully
           content:
             application/json:
               schema:
                 $ref: '#/components/schemas/Tournament_Mostrar'
-        "404":
-          description: tournament not found
-        "401":
-          description: you are not authorized to see the teams
   /api/matches/{id}/result:
     put:
       tags:
@@ -265,18 +265,18 @@ paths:
               $ref: '#/components/schemas/Match'
         required: true
       responses:
+        "400":
+          description: Couldn't update the result
+        "404":
+          description: Couldn't find the match
+        "401":
+          description: You don't have permission to update the result
         "200":
           description: Resultd updated successfully
           content:
             application/json:
               schema:
                 $ref: '#/components/schemas/Match'
-        "404":
-          description: Couldn't find the match
-        "400":
-          description: Couldn't update the result
-        "401":
-          description: You don't have permission to update the result
   /api/users/image:
     post:
       tags:
@@ -309,8 +309,6 @@ paths:
       summary: Delete user image
       operationId: deleteImage
       responses:
-        "400":
-          description: Request cannot be processed
         "200":
           description: Imaged deleted successfully
           content:
@@ -319,6 +317,8 @@ paths:
                 $ref: '#/components/schemas/User'
         "401":
           description: You are not authorized to delete the image
+        "400":
+          description: Request cannot be processed
   /api/tournaments:
     get:
       tags:
@@ -351,14 +351,14 @@ paths:
               $ref: '#/components/schemas/Tournament'
         required: true
       responses:
+        "401":
+          description: you cannot create a tournament
         "200":
           description: success creating the tournament
           content:
             application/json:
               schema:
                 $ref: '#/components/schemas/Tournament'
-        "401":
-          description: you cannot create a tournament
   /api/tournaments/{id}/image:
     get:
       tags:
@@ -373,6 +373,10 @@ paths:
           type: integer
           format: int64
       responses:
+        "401":
+          description: You are not authorized to download the image
+        "404":
+          description: tournament not found
         "204":
           description: there's no image
         "200":
@@ -381,10 +385,6 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/Tournament'
-        "401":
-          description: You are not authorized to download the image
-        "404":
-          description: tournament not found
     post:
       tags:
       - tournament-rest-controller
@@ -409,16 +409,16 @@ paths:
                   type: string
                   format: binary
       responses:
-        "401":
-          description: You are not authorized to upload the image
+        "404":
+          description: tournament not found
         "200":
           description: uploaded correctly
           content:
             application/json:
               schema:
                 $ref: '#/components/schemas/Tournament'
-        "404":
-          description: tournament not found
+        "401":
+          description: You are not authorized to upload the image
     delete:
       tags:
       - tournament-rest-controller
@@ -434,14 +434,14 @@ paths:
       responses:
         "400":
           description: couldn't get to the image
+        "401":
+          description: You are not authorized to delete the image
         "200":
           description: deleted correctly
           content:
             application/json:
               schema:
                 $ref: '#/components/schemas/Tournament'
-        "401":
-          description: You are not authorized to delete the image
         "404":
           description: tournament not found
   /api/auth/refresh:
@@ -503,30 +503,6 @@ paths:
             '*/*':
               schema:
                 $ref: '#/components/schemas/AuthResponse'
-  /api/users/{id}/image:
-    get:
-      tags:
-      - user-rest-controller
-      summary: Download user image
-      operationId: downloadImage
-      parameters:
-      - name: id
-        in: path
-        required: true
-        schema:
-          type: integer
-          format: int64
-      responses:
-        "404":
-          description: Image not found
-        "200":
-          description: Imaged downloaded successfully
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/User'
-        "204":
-          description: Image field is empty
   /api/users/me:
     get:
       tags:
@@ -534,14 +510,14 @@ paths:
       summary: Get the user conected
       operationId: getActiveUser
       responses:
-        "404":
-          description: User conected not found
         "200":
           description: Found the connected user
           content:
             application/json:
               schema:
                 $ref: '#/components/schemas/User_Mostrar'
+        "404":
+          description: User conected not found
   /api/users/me/tournaments:
     get:
       tags:
@@ -601,6 +577,30 @@ paths:
                 $ref: '#/components/schemas/User_Mostrar'
         "404":
           description: Match not found
+  /api/users/image/{id}:
+    get:
+      tags:
+      - user-rest-controller
+      summary: Download user image
+      operationId: downloadImage
+      parameters:
+      - name: id
+        in: path
+        required: true
+        schema:
+          type: integer
+          format: int64
+      responses:
+        "404":
+          description: Image not found
+        "204":
+          description: Image field is empty
+        "200":
+          description: Imaged downloaded successfully
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/User'
   /api/tournaments/{id}/matches:
     get:
       tags:
@@ -649,14 +649,14 @@ paths:
           type: integer
           format: int64
       responses:
-        "404":
-          description: Match not found
         "200":
           description: Found the mathch
           content:
             application/json:
               schema:
                 $ref: '#/components/schemas/Match_Mostrar'
+        "404":
+          description: Match not found
   /api/tournaments/{id}/teams/{teamid}:
     delete:
       tags:
@@ -677,16 +677,16 @@ paths:
           type: integer
           format: int64
       responses:
+        "401":
+          description: you are not authorized to deelte the team
+        "404":
+          description: tournament not found
         "200":
           description: team deleted successfully
           content:
             application/json:
               schema:
                 $ref: '#/components/schemas/Tournament'
-        "401":
-          description: you are not authorized to deelte the team
-        "404":
-          description: tournament not found
 components:
   schemas:
     User_Mostrar:
